tests/invalid/foreign_enum_invalid.err_exp
foreign_enum_invalid.m:026: Error: `:- pragma foreign_enum' declaration for
foreign_enum_invalid.m:026:   `foreign_enum_invalid.in_int'/0 in module
foreign_enum_invalid.m:026:   interface.
foreign_enum_invalid.m:032: In `:- pragma foreign_enum' declaration for
foreign_enum_invalid.m:032:   `foreign_enum_invalid.incomplete'/0:
foreign_enum_invalid.m:032:   error: not all constructors have a foreign value.
foreign_enum_invalid.m:032:   The following constructor does not have a foreign
foreign_enum_invalid.m:032:   value
foreign_enum_invalid.m:032:       `foreign_enum_invalid.baz'
foreign_enum_invalid.m:037: In `:- pragma foreign_enum' declaration for
foreign_enum_invalid.m:037:   `foreign_enum_invalid.incomplete2'/0:
foreign_enum_invalid.m:037:   error: not all constructors have a foreign value.
foreign_enum_invalid.m:037:   The following constructors do not have foreign
foreign_enum_invalid.m:037:   values
foreign_enum_invalid.m:037:       `foreign_enum_invalid.bar2',
foreign_enum_invalid.m:037:       `foreign_enum_invalid.baz2',
foreign_enum_invalid.m:037:       `foreign_enum_invalid.foo2'
foreign_enum_invalid.m:039: In `:- pragma foreign_enum' declaration for
foreign_enum_invalid.m:039:   `foreign_enum_invalid.not_a_bijection'/0:
foreign_enum_invalid.m:039:   error: the mapping between Mercury enumeration
foreign_enum_invalid.m:039:   values and foreign values does not form a
foreign_enum_invalid.m:039:   bijection.
foreign_enum_invalid.m:047: In `:- pragma foreign_enum' declaration for
foreign_enum_invalid.m:047:   `foreign_enum_invalid.dup_foreign_enum'/0:
foreign_enum_invalid.m:047:   error: `foreign_enum_invalid.dup_foreign_enum'/0
foreign_enum_invalid.m:047:   has multiple foreign_enum pragmas.
